--- a/Leetcode75/Leetcode75.csproj
+++ b/Leetcode75/Leetcode75.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Problems\Problems.csproj" />
+  </ItemGroup>
+
 </Project>
